prow/cluster/resources/gcsweb/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gcsweb
  labels:
    app: gcsweb
spec:
  replicas: 2
  # selector defaults from template labels
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gcsweb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: gcsweb
          image: k8s.gcr.io/gcsweb:v1.1.0
          args:
            - -upgrade-proxied-http-to-https
            - -b=kyma-prow-logs
            - -b=kyma-development-artifacts
            - -p=8080
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 0.1
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
